# Albany

./: CMakeLists.txt  README.md
doc/: hopper-trilinos-cmake  titan-trilinos-cmake
doc/nightlyTestHarness/: albany_build.sh  dakota_checkout.sh  do-cmake-albany  do-cmake-trilinos  run_master.sh  set_andys_env.in  trilinos_build.sh
examples/: CMakeLists.txt
examples/ATO/: CMakeLists.txt
examples/ATO/ATOLinearElasticity/: input.xml
examples/ATO/Elasticity/: CMakeLists.txt  input.xml
examples/ATO/Mitchell_2D/: CMakeLists.txt  input.xml  nodal.xml  runtest.cmake
examples/ATO/Mitchell_3D/: runtest.cmake
examples/Aeras/: CMakeLists.txt
examples/GPAM/: input.xml
examples/IossRestart/: quadOut.exo.4.0
examples/LCM/: CMakeLists.txt
src/: Albany_Application.cpp  Albany_Application.hpp  Albany_BCTraits.cpp  Albany_BCTraits.hpp  Albany_DistributedParameterLibrary.hpp  Albany_DistributedParameterLibrary_Epetra.hpp  Albany_ModelEvaluator.cpp  Albany_ModelEvaluator.hpp  Albany_ModelEvaluatorT.cpp  Albany_ModelEvaluatorT.hpp  Albany_RythmosObserver.cpp  Albany_SolverFactory.cpp  Albany_SolverFactory.hpp  Albany_StateInfoStruct.hpp  Albany_StateManager.cpp  Albany_StateManager.hpp  Albany_Utils.cpp  CMakeLists.txt  Main_Solve.cpp  PHAL_FactoryTraits.hpp  PHAL_Workset.hpp
src/ATO/: ATO_Solver.cpp  ATO_Solver.hpp  CMakeLists.txt
src/ATO/evaluators/: ATO_ComputeBasisFunctions.cpp  ATO_ComputeBasisFunctions.hpp  ATO_ComputeBasisFunctions_Def.hpp  ATO_StiffnessObjective.hpp  ATO_StiffnessObjective_Def.hpp  ATO_TopologyWeighting.hpp  ATO_TopologyWeighting_Def.hpp
src/ATO/problems/: ATO_EvaluatorUtils.cpp  ATO_EvaluatorUtils.hpp  ATO_EvaluatorUtils_Def.hpp  ATO_OptimizationProblem.cpp  ATO_OptimizationProblem.hpp  LinearElasticityProblem.cpp  LinearElasticityProblem.hpp
src/ATO/utils/: ATO_Aggregator.cpp  ATO_Aggregator.hpp  ATO_DOTk_Optimizer.cpp  ATO_Optimizer.cpp  ATO_Optimizer.hpp  ATO_TopoTools.hpp
src/Aeras/: CMakeLists.txt
src/FELIX/: CMakeLists.txt
src/HMC/: CMakeLists.txt
src/HMC/evaluators/: HMC_Residual.cpp  HMC_ScatterResidual.cpp  HMC_ScatterResidual.hpp  HMC_ScatterResidual_Def.hpp
src/HMC/problems/: HMCProblem.cpp  HMCProblem.hpp  HMC_EvaluatorUtils.cpp  HMC_EvaluatorUtils.hpp  HMC_EvaluatorUtils_Def.hpp
src/HMC/problems/Repose/: HMCProblem.cpp  HMCProblem.hpp
src/LCM/: CMakeLists.txt
src/adapt/: AAdapt_AnalyticFunction.cpp  AAdapt_AnalyticFunction.hpp  AAdapt_CopyRemesh.cpp  AAdapt_CopyRemesh.hpp  AAdapt_RandomCriterion.cpp  AAdapt_RandomCriterion.hpp  AAdapt_RandomFracture.cpp  AAdapt_RandomFracture.hpp  AAdapt_STKAdapt.hpp  AAdapt_STKAdapt_Def.hpp  AAdapt_STKUnifSizeField.cpp  AAdapt_STKUnifSizeField.hpp  AAdapt_TopologyModification.cpp  AAdapt_TopologyModification.hpp
src/disc/: Adapt_NodalDataBlock.cpp  Adapt_NodalDataBlock.hpp  Albany_AbstractDiscretization.hpp  Albany_DiscretizationFactory.cpp  Albany_DiscretizationFactory.hpp
src/evaluators/: Aeras_ResponseL2Error.cpp  Aeras_ResponseL2Error.hpp  Aeras_ResponseL2Error_Def.hpp  Aeras_ShallowWaterResponseL2Error.hpp  Aeras_ShallowWaterResponseL2Error_Def.hpp  FELIX_ResponseSurfaceVelocityMismatch_Def.hpp  PHAL_Absorption.hpp  PHAL_ComputeBasisFunctionsSide_Def.hpp  PHAL_DOFSideToCell.hpp  PHAL_DOFSideToCell_Def.hpp  PHAL_DOFVecGradInterpolation_Def.hpp  PHAL_DirichletCondensed.cpp  PHAL_DirichletCondensed.hpp  PHAL_DirichletCondensed_Def.hpp  PHAL_DirichletFieldSideEq.cpp  PHAL_DirichletFieldSideEq.hpp  PHAL_DirichletFieldSideEq_Def.hpp  PHAL_DirichletOffNodeSet_Def.hpp  PHAL_DirichletOffSideSets.cpp  PHAL_DirichletOffSideSets.hpp  PHAL_DirichletOffSideSets_Def.hpp  PHAL_DirichletSideEq.cpp  PHAL_DirichletSideEq.hpp  PHAL_DirichletSideEq_Def.hpp  PHAL_GatherCoordinateVector.hpp  PHAL_GatherScalarNodalParameter_Def.hpp  PHAL_GatherSolution.hpp  PHAL_GatherSolution_Def.hpp  PHAL_LumpedMass.cpp  PHAL_LumpedMass.hpp  PHAL_LumpedMass_Def.hpp  PHAL_Neumann.hpp  PHAL_Neumann_Def.hpp  PHAL_Permittivity.hpp  PHAL_Permittivity_Def.hpp  PHAL_ResponseFieldIntegral_Def.hpp  PHAL_ResponseSquaredL2Difference.hpp  PHAL_ResponseSquaredL2DifferenceSide.hpp  PHAL_ResponseSquaredL2DifferenceSide_Def.hpp  PHAL_ResponseSquaredL2Difference_Def.hpp  (+6 more)
src/problems/: Albany_AbstractProblem.cpp  Albany_AbstractProblem.hpp  Albany_BCUtils.cpp  Albany_BCUtils.hpp  Albany_BCUtils_Def.hpp  Albany_CahnHillProblem.hpp  Albany_ComprNSProblem.cpp  Albany_EvaluatorUtils.hpp  Albany_EvaluatorUtils_Def.hpp  Albany_HeatProblem.cpp  Albany_Layouts.cpp  Albany_Layouts.hpp  Albany_NavierStokes.cpp  Albany_PNPProblem.cpp  Albany_ProblemFactory.cpp  Albany_ProblemFactory.hpp  Albany_ResponseUtilities_Def.hpp
src/responses/: Albany_AbstractResponseFunction.hpp  (+19 more)
(+253 files in other folders)
